# wasm-micro-runtime

./: .gitmodules  README.md
tests/unit/smart-tests/: CMakeLists.txt
tests/unit/smart-tests/aot/: CMakeLists.txt  aot_loader_enhanced_test.cc  aot_utility_step_2.cc  enhanced_aot_runtime_test.cc  enhanced_gen_aot_test.cc  test_aot_advanced_features.cc  test_aot_enhanced_step_1.cc  test_aot_function_execution.cc  test_aot_intrinsic_enhanced_step_1.cc  test_aot_intrinsic_enhanced_step_2.cc  test_aot_memory_management_enhanced.cc  test_aot_module_loading.cc  test_aot_platform_integration.cc
tests/unit/smart-tests/aot-arch/: CMakeLists.txt  aot_arch_add_40_step_1.cc
tests/unit/smart-tests/compilation/: CMakeLists.txt  enhanced_aot_compiler_test.cc  enhanced_aot_emit_const_test.cc  enhanced_aot_emit_conversion_test.cc  enhanced_aot_emit_function_test.cc  enhanced_aot_stack_frame_comp_test.cc  enhanced_simd_access_lanes_test.cc  enhanced_simd_load_store_test.cc
tests/unit/smart-tests/constants/: CMakeLists.txt
tests/unit/smart-tests/control-flow/: CMakeLists.txt  enhanced_block_bt_test.cc  enhanced_call_indirect_test.cc  enhanced_call_test.cc  enhanced_end_test.cc  enhanced_return_call_indirect_test.cc  enhanced_return_call_ref_test.cc  enhanced_return_call_test.cc  enhanced_select_test.cc
tests/unit/smart-tests/extension/: CMakeLists.txt  enhanced_f64x2_extmul_high_i32x4_s_test.cc  enhanced_f64x2_extmul_high_i32x4_u_test.cc  enhanced_f64x2_splat_test.cc  enhanced_i16x8_extmul_high_i8x16_u_test.cc  enhanced_i16x8_splat_test.cc  enhanced_i32x4_splat_test.cc  enhanced_i64x2_splat_test.cc  enhanced_i8x16_lt_s_test.cc  enhanced_i8x16_lt_u_test.cc  enhanced_i8x16_splat_test.cc  enhanced_v128_load_test.cc
tests/unit/smart-tests/interpreter/: CMakeLists.txt  enhanced_wasm_runtime_test.cc  interpreter_coverage_improve_step_1.cc  interpreter_coverage_improve_step_2.cc  interpreter_coverage_improve_step_3.cc  interpreter_coverage_improve_step_4.cc  test_bytecode_interp_enhanced.cc  test_instance_creation_enhanced.cc  test_module_loading_enhanced.cc
tests/unit/smart-tests/memory/: CMakeLists.txt  enhanced_f32_load_test.cc  enhanced_f32_store_test.cc  enhanced_f64_load_test.cc  enhanced_f64_store_test.cc  enhanced_i32_load16_s_test.cc  enhanced_i32_load16_u_test.cc  enhanced_i32_load8_s_test.cc  enhanced_i32_load8_u_test.cc  enhanced_i32_load_test.cc  enhanced_i32_store16_test.cc  enhanced_i32_store8_test.cc  enhanced_i32_store_test.cc  enhanced_i64_load16_s_test.cc  enhanced_i64_load16_u_test.cc  enhanced_i64_load32_s_test.cc  enhanced_i64_load32_u_test.cc  enhanced_i64_load8_s_test.cc  enhanced_i64_load8_u_test.cc  enhanced_i64_load_test.cc  enhanced_i64_store16_test.cc  enhanced_i64_store32_test.cc  enhanced_i64_store8_test.cc  enhanced_i64_store_test.cc  enhanced_memory_copy_test.cc  enhanced_memory_fill_test.cc  enhanced_memory_grow_test.cc  enhanced_memory_init_test.cc  enhanced_memory_size_test.cc
tests/unit/smart-tests/numeric/: CMakeLists.txt  enhanced_f32_abs_test.cc  enhanced_f32_ceil_test.cc  enhanced_f32_copysign_test.cc  enhanced_f32_div_test.cc  enhanced_f32_floor_test.cc  enhanced_f32_gt_test.cc  enhanced_f32_lt_test.cc  enhanced_f32_max_test.cc  enhanced_f32_min_test.cc  enhanced_f32_mul_test.cc  enhanced_f32_nearest_test.cc  enhanced_f32_reinterpret_i32_test.cc  enhanced_f32_sqrt_test.cc  enhanced_f32_sub_test.cc  enhanced_f64_convert_i32_s_test.cc  enhanced_f64_convert_i32_u_test.cc  enhanced_f64_convert_i64_s_test.cc  enhanced_f64_convert_i64_u_test.cc  enhanced_f64_copysign_test.cc  enhanced_f64_div_test.cc  enhanced_f64_floor_test.cc  enhanced_f64_ge_test.cc  enhanced_f64_gt_test.cc  enhanced_f64_le_test.cc  enhanced_f64_max_test.cc  enhanced_f64_min_test.cc  enhanced_f64_mul_test.cc  enhanced_f64_nearest_test.cc  enhanced_f64_promote_f32_test.cc  enhanced_f64_reinterpret_i64_test.cc  enhanced_f64_sqrt_test.cc  enhanced_f64_sub_test.cc  enhanced_f64_trunc_test.cc  enhanced_i32_add_test.cc  enhanced_i32_and_test.cc  enhanced_i32_clz_test.cc  enhanced_i32_ctz_test.cc  enhanced_i32_div_s_test.cc  enhanced_i32_div_u_test.cc  (+62 more)
tests/unit/smart-tests/posix/: CMakeLists.txt  enhanced_posix_file_test.cc  enhanced_posix_thread_test.cc  posix_coverage_improve_step_1.cc  posix_coverage_improve_step_2.cc  posix_coverage_improve_step_3.cc  posix_coverage_improve_step_4.cc  posix_multicast_ttl_test.cc  posix_socket_options_test.cc  posix_test_helper.h
tests/unit/smart-tests/reference/: CMakeLists.txt  enhanced_any_convert_extern_test.cc  enhanced_call_ref_test.cc  enhanced_extern_convert_any_test.cc  enhanced_ref_as_non_null_test.cc  enhanced_ref_eq_test.cc  enhanced_table_copy_test.cc  enhanced_table_fill_test.cc  enhanced_table_get_test.cc  enhanced_table_grow_test.cc  enhanced_table_set_test.cc  enhanced_table_size_test.cc
tests/unit/smart-tests/runtime-common/: CMakeLists.txt  enhanced_gen_runtime_common_test.cc  enhanced_wasm_runtime_common_test.cc
tests/unit/smart-tests/shared-utils/: CMakeLists.txt  runtime_timer_enhanced_test.cc  shared_utils_add_30_step_2.cc  shared_utils_add_30_step_3.cc
tests/unit/smart-tests/simd/: CMakeLists.txt  enhanced_f32x4_abs_test.cc  enhanced_f32x4_ceil_test.cc  enhanced_f32x4_div_test.cc  enhanced_f32x4_eq_test.cc  enhanced_f32x4_extract_lane_test.cc  enhanced_f32x4_floor_test.cc  enhanced_f32x4_max_test.cc  enhanced_f32x4_min_test.cc  enhanced_f32x4_ne_test.cc  enhanced_f32x4_nearest_test.cc  enhanced_f32x4_neg_test.cc  enhanced_f32x4_pmax_test.cc  enhanced_f32x4_pmin_test.cc  enhanced_f32x4_replace_lane_test.cc  enhanced_f32x4_trunc_test.cc  enhanced_f64x2_abs_test.cc  enhanced_f64x2_ceil_test.cc  enhanced_f64x2_convert_low_i32x4_s_test.cc  enhanced_f64x2_demote_test.cc  enhanced_f64x2_eq_test.cc  enhanced_f64x2_extmul_low_i32x4_s_test.cc  enhanced_f64x2_extract_lane_test.cc  enhanced_f64x2_floor_test.cc  enhanced_f64x2_max_test.cc  enhanced_f64x2_min_test.cc  enhanced_f64x2_ne_test.cc  enhanced_f64x2_nearest_test.cc  enhanced_f64x2_neg_test.cc  enhanced_f64x2_pmax_test.cc  enhanced_f64x2_pmin_test.cc  enhanced_f64x2_sqrt_test.cc  (+59 more)
(+61 files in other folders)
