# Enhanced Unit Test CMakeLists.txt
cmake_minimum_required(VERSION 3.12)

add_subdirectory(aot)
add_subdirectory(aot-arch)
add_subdirectory(compilation)
add_subdirectory(constants)
add_subdirectory(control-flow)
add_subdirectory(extension)
add_subdirectory(interpreter)
add_subdirectory(memory)
add_subdirectory(numeric)
add_subdirectory(posix)
add_subdirectory(reference)
add_subdirectory(runtime-common)
add_subdirectory(simd)
add_subdirectory(ssp)
add_subdirectory(shared-utils)
add_subdirectory(table)
add_subdirectory(thread-mgr)
add_subdirectory(variable)
add_subdirectory(wasm-c-api)
add_subdirectory(wasm-vm)